--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -96,10 +96,16 @@ select {
   background-size: calcView(25);
   background-position: 95%;
 }
+
 select:disabled {
   filter: grayscale(1);
 }
-
+.select-class {
+  padding-block: 0;
+  padding-inline: 3vw;
+  font-size: calcView(20);
+  line-height: calcView(20);
+}
 .select-class-main {
   .select-class:disabled {
     .select-class-main:after {
@@ -107,7 +113,9 @@ select:disabled {
     }
   }
 }
-
+.me-text {
+  font-size: calcView(18);
+}
 select:focus {
   border: calcView(2) solid $PrimaryColor;
 }
@@ -229,6 +237,7 @@ select:focus {
     }
   }
 }
+
 input {
   width: 100%;
   height: calcView(50);
@@ -239,6 +248,7 @@ input {
   border-radius: calcView(5);
   background: #fff;
 }
+
 .form {
   width: calcView(362);
   margin: calcView(30) auto;
@@ -273,6 +283,7 @@ input {
     background-image: url("./assests/calender.svg");
     background-size: cover;
   }
+
   input[type="checkbox"] {
     width: calcView(50);
     height: calcView(50);
@@ -283,6 +294,7 @@ input {
   .form-select {
     width: calcView(150);
   }
+
   .check-boxes {
     width: calcView(50);
     height: calcView(50);
@@ -293,36 +305,45 @@ input {
     border-style: solid;
     border-radius: calcView(10);
   }
+
   #checkbox {
     width: calcView(43);
     height: calcView(43);
   }
+
   input[type="checkbox"]:disabled ~ .check-boxes {
     opacity: 0.4 !important;
   }
+
   &-input {
     &-row {
       display: flex;
       gap: calcView(14);
     }
   }
+
   .flex-grow {
     flex-grow: 1;
   }
+
   .flex-row {
     display: flex;
     gap: calcView(14);
   }
+
   .flex-col {
     display: flex;
     flex-direction: column;
   }
+
   .align-center {
     align-items: center;
   }
+
   .justify-center {
     justify-items: center;
   }
+
   .btn {
     background-color: $DarkGray;
     color: $PrimaryColor;
@@ -334,11 +355,13 @@ input {
 .bold {
   font-weight: 700;
 }
+
 .search-select {
   display: block;
   width: 100%;
   height: calcView(56);
   position: relative;
+
   .select-class-main {
     position: relative;
   }
@@ -354,10 +377,12 @@ input {
     right: calcView(10);
     top: calcView(12);
   }
+
   .select-class:disabled {
     background: transparent;
   }
 }
+
 .secondary-icon {
   display: flex;
   align-items: center;
@@ -380,21 +405,25 @@ input {
   background: white;
   border-radius: calcView(6);
 }
+
 .key {
   margin-top: calcView(20);
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+
   &-icon {
     width: calcView(100);
     height: calcView(100);
     @include flexCenter();
     border: calcView(7) solid black;
     border-radius: calcView(99);
+
     &-svg {
       width: calcView(42);
       height: calcView(42);
+
       path {
         width: calcView(42);
         height: calcView(42);
@@ -402,48 +431,59 @@ input {
       }
     }
   }
+
   .payed {
     border: calcView(7) solid #00923a;
+
     svg {
       path {
         fill: #00923a;
       }
     }
   }
+
   .request {
     border: calcView(7) solid #c30000;
+
     svg {
       path {
         fill: #c30000;
       }
     }
   }
+
   .pending {
     border: calcView(7) solid #c30000;
+
     svg {
       path {
         fill: black;
       }
     }
   }
+
   .lessthenthree {
     border: calcView(7) solid #c30000;
+
     svg {
       path {
         fill: #f7931a;
       }
     }
   }
+
   &-text {
     font-size: calcView(16);
     font-weight: 600;
     text-transform: uppercase;
   }
+
   &-confirmations {
     font-size: calcView(16);
     vertical-align: middle;
     line-height: calcView(20);
     text-align: center;
+
     img {
       margin-left: calcView(5);
       width: calcView(16);
@@ -748,6 +788,7 @@ input {
 .accept {
   width: 100%;
   overflow-y: auto;
+
   &-container {
     width: 100%;
     height: calcView(583);
@@ -759,6 +800,7 @@ input {
       flex-direction: column;
     }
   }
+
   .endorse-select {
     max-width: 100%;
     width: 100%;
@@ -767,6 +809,7 @@ input {
 
 .Repay {
   display: block;
+
   .select-opt {
     width: calcView(300);
   }
@@ -1183,6 +1226,7 @@ input {
 
 .activity {
   position: relative;
+
   .poped-up {
     position: absolute;
     right: calcView(23);
@@ -1194,17 +1238,22 @@ input {
     border: calcView(2) solid #c0c0c0;
     display: flex;
     flex-direction: column;
+
     hr {
       border: calcView(0.5) inset;
     }
+
     .filter-box {
       margin: calcView(10);
+
       &-input {
         display: flex;
         gap: calcView(10);
+
         input {
           display: none;
         }
+
         .check-boxes {
           @include flexCenter();
           width: calcView(32);
@@ -1212,23 +1261,27 @@ input {
           border-width: calcView(2);
           border-style: solid;
           border-radius: calcView(4);
+
           svg {
             width: calcView(15);
             height: calcView(12);
           }
         }
+
         &-text {
           font-size: calcView(16);
         }
       }
     }
   }
+
   .head {
     display: flex;
     width: calcView(382);
     justify-content: space-between;
     align-items: center;
   }
+
   .bills {
     display: flex;
     flex-direction: column;
@@ -1350,6 +1403,7 @@ input {
             border: solid calcView(2) $PrimaryColor;
           }
         }
+
         .invalid {
           input {
             border: calcView(3) solid red !important;
@@ -1376,6 +1430,7 @@ input {
     }
   }
 }
+
 .toast {
   position: fixed;
   bottom: calcView(10);
@@ -1388,6 +1443,7 @@ input {
   border-radius: calcView(6);
   z-index: 99999;
 }
+
 .setting {
   margin-top: calcView(45);
   display: flex;
@@ -1445,8 +1501,10 @@ input {
     }
   }
 }
+
 .identity-peerid {
   font-size: calcView(14);
+
   img {
     vertical-align: middle;
     width: calcView(16);
@@ -1455,6 +1513,7 @@ input {
     margin-bottom: calcView(3);
   }
 }
+
 .error {
   width: 100%;
   height: 100vh;
@@ -1464,6 +1523,7 @@ input {
   align-items: center;
   justify-content: space-between;
   padding-bottom: calcView(50);
+
   &-head {
     margin-top: calcView(45);
     display: flex;
@@ -1479,14 +1539,17 @@ input {
       font-size: calcView(23);
       line-height: calcView(23);
     }
+
     .close-btn {
       @include flexCenter();
       border: calcView(2) solid white;
       border-radius: calcView(99);
+
       svg {
         width: calcView(16);
         height: calcView(16);
         viewport-fit: contain;
+
         path {
           fill: white;
           z-index: 2;
@@ -1494,33 +1557,40 @@ input {
       }
     }
   }
+
   &-body {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     width: calcView(385);
+
     &-text {
       margin-top: calcView(100);
       flex-grow: 1;
       display: flex;
       flex-direction: column;
       gap: calcView(40);
+
       span {
         color: white;
       }
+
       &-h1 {
         font-size: calcView(116);
         font-weight: 600;
       }
+
       &-h2 {
         font-size: calcView(32);
         font-weight: 600;
       }
+
       &-p {
         font-size: calcView(20);
       }
     }
+
     .btn {
       width: 100%;
       background: #f7931a;
@@ -1529,6 +1599,7 @@ input {
     }
   }
 }
+
 .contact {
   margin: 0 calcView(21);
   height: 100vh;
@@ -1538,6 +1609,7 @@ input {
   justify-content: space-between;
   gap: calcView(30);
   padding-bottom: calcView(50);
+
   &-head {
     margin-top: calcView(45);
     display: flex;
@@ -1553,17 +1625,20 @@ input {
       font-size: calcView(23);
       line-height: calcView(23);
     }
+
     .close-btn {
       path {
         fill: white;
         z-index: 2;
       }
+
       rect {
         z-index: 1;
         fill: black;
       }
     }
   }
+
   .input-contact {
     width: 100%;
     height: calcView(54);
@@ -1571,10 +1646,12 @@ input {
     outline: none;
     border-radius: calcView(12);
     border: calcView(2) solid #515151;
+
     &:focus {
       border: calcView(2) solid #d77300;
     }
   }
+
   &-body {
     flex-grow: 1;
     width: 100%;
@@ -1584,6 +1661,7 @@ input {
     justify-items: start;
     align-content: start;
     gap: calcView(10);
+
     &-user {
       width: 100%;
       background: #fff;
@@ -1594,6 +1672,7 @@ input {
       align-items: center;
       justify-content: space-between;
       border-radius: calcView(8);
+
       span {
         flex-grow: 1;
         text-overflow: ellipsis;
@@ -1603,10 +1682,12 @@ input {
     }
   }
 }
+
 .add-contact {
   .contact-body {
     gap: calcView(30);
   }
+
   input {
     height: calcView(56);
     border: none;
@@ -1616,6 +1697,7 @@ input {
     padding: 0 calcView(20);
     font-size: calcView(16);
   }
+
   input:focus {
     border: calcView(4) solid #f7931a;
   }
@@ -1626,10 +1708,12 @@ input {
     align-items: center;
     justify-content: center;
     gap: calcView(10);
+
     span {
       font-size: calcView(21);
       line-height: calcView(21);
     }
+
     img {
       display: inline;
       vertical-align: middle;
@@ -1639,9 +1723,11 @@ input {
     }
   }
 }
+
 .btn {
   width: 100%;
 }
+
 .popup {
   z-index: 99;
   position: fixed;
@@ -1661,6 +1747,7 @@ input {
     width: calcView(382);
     height: calcView(48);
     margin-top: calcView(45);
+
     &-title {
       margin-top: calcView(2);
       text-transform: uppercase;
@@ -1676,6 +1763,7 @@ input {
     margin: calcView(20) auto;
     padding: calcView(40) calcView(21);
     width: 100%;
+
     &-inner {
       display: flex;
       flex-direction: column;
@@ -1683,6 +1771,7 @@ input {
       position: relative;
     }
   }
+
   .download {
     position: absolute;
     top: calcView(-40);
@@ -1694,6 +1783,7 @@ input {
     text-transform: uppercase;
     padding: calcView(5) calcView(10);
     border-radius: calcView(6);
+
     svg {
       width: calcView(16);
       height: calcView(18);
@@ -1702,6 +1792,7 @@ input {
       vertical-align: middle;
     }
   }
+
   &-btns {
     margin-top: calcView(33);
     display: flex;
@@ -1735,6 +1826,7 @@ input {
     line-height: calcView(20) !important;
   }
 }
+
 .see-more-btn {
   color: $Black;
   font-size: calcView(20);
@@ -1748,6 +1840,7 @@ input {
     transform: translate(-50%, -50%) rotate(360deg);
   }
 }
+
 .loading div {
   position: absolute;
   width: calcView(60);
@@ -1756,17 +1849,20 @@ input {
   border-top-color: transparent;
   border-radius: 50%;
 }
+
 .loading div {
   animation: loading 0.7246376811594202s linear infinite;
   top: calcView(100);
   left: calcView(100);
 }
+
 .loading-sub {
   width: calcView(200);
   height: calcView(200);
   display: inline-block;
   overflow: hidden;
 }
+
 .loading-main {
   width: 100vw;
   height: 100vh;
@@ -1774,6 +1870,7 @@ input {
   align-items: center;
   justify-content: center;
 }
+
 .loading {
   width: calcView(200);
   height: calcView(200);
@@ -1782,6 +1879,7 @@ input {
   backface-visibility: hidden;
   transform-origin: 0 0; /* see note above */
 }
+
 .loading div {
   box-sizing: content-box;
 }
