minor changes ignore it

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -12,6 +12,7 @@
 
 $standardWidth: 430;
 $PrimaryColor: #f7931a;
+$TextColor: #b7b700;
 $TextColor: #b28b00;
 $Black: #151515;
 $LightBlack: #636363;
