Sell Page Correction

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -134,6 +134,7 @@ select:focus {
     font-size: calcView(24);
     line-height: calcView(24);
     margin-top: calcView(2);
+    text-transform: uppercase;
   }
 }
 .accept-heading {
